# SItool

./: CMakeLists.txt  README.md
notes/: notes.txt
src/: commandsOptions.c  commandsOptions.h  config.c  config.h  main.c
